# [1.5.2] - 2019-03-27

## New

- styles for conversations

## Updated/fixes

- “caret” has a single “r”.
- added modifier `.pm-button--for-icon` (for group button made of icons)
- add missing ` !default` to some variables


# [1.5.1] - 2019-03-26

## Updated/fixes

- remove `progress` tag to `meter` (for space used)
- added `white` classes (`fill-white` & `bg-white`)
- added `opacity-50` class (=> `opacity: .5`)
- doc for `flex-nowrap` class


# [1.5.0] - 2019-03-25

## New

- detect scroll on main navigation/display gradient
- add `disabled` style for toggle
- add `indeterminate` style for checkbox

## Updated/fixes

- Update button aliases to modifiers.

# [1.4.9] - 2019-03-22

## New

- added caret icon
- WIP: detect scroll on main navigation

## Updated/fixes

- Update toggle component, also fixed it in RTL version

# [1.4.7] - 2019-03-21

## New

- Tooltips styles
- RTL documentation
- added class `.mirror` in `sprite-for-css-only.svg` and in `_design-system-layout-modules.scss`

## Updated/fixes

- Missing paths `$path-images` in `_pm-loadingcontent.scss`

## Misc

- Fixed CSP issue on SVG sprite for CSS (Firefox... you really start to stress me up!)

# [1.4.6] - 2019-03-19

## New

- conversation styles (WIP)

# [1.4.5] - 2019-03-18

## New

- added new images useful in settings (in `assets/img/pm-images`)

## Updated/fixes

- added disabled styles for `radio`/`checkbox`
- added new color on `block-info-standard`: `block-info-standard-error`
- added ProtonMail icon with “native” viewbox of 16×16

# [1.4.4] - 2019-03-15

## New

- added class `dash2x` to make path bigger on SVGs

## Updated/fixes

- added example/fix on icons in `button`/`a`.

# [1.4.3] - 2019-03-12

## New

- added class `rounded50` (`border-radius: 50%`)
- made design system more RTL-friendly (WIP)
- added examples of integration in icons
- added one DO/DONT

## Updated/fixes

- removed duplicate SVG icon
- moved some classes that are specific to design system website
- indentation fixes
