@@ -23,7 +23,14 @@
     <aside class="aside noprint">
 
       <ul class="unstyled m0 aligncenter">
-        <li class="mb0-5 nodesktop notablet "><button type="button" class="togglemenu w100 center color-global-light js-togglemenu aside-link" title="Navigation"><span aria-hidden="true">≡</span> <span class="sr-only">navigation</span></button></li>
+        <li class="mb0-5 nodesktop notablet ">
+          <button type="button" class="togglemenu w100 center color-global-light js-togglemenu aside-link" title="Navigation">
+            <svg viewBox="0 0 16 16" class="aside-linkIcon fill-global-light" role="img" focusable="false" aria-hidden="true">
+              <use xlink:href="#shape-burger"></use>
+            </svg>
+            <span class="sr-only">navigation</span>
+          </button>
+        </li>
         <li class="mb0-5">
           <a href="/" class="center bl aside-link" title="ProtonMail" aria-current="true">
             <svg viewBox="0 0 16 16" class="aside-linkIcon fill-global-light" role="img" focusable="false" aria-hidden="true">
