@@ -41,8 +41,6 @@ body {
 
 .togglemenu {
   margin-top: 1.8rem;
-  font-size: 2.4rem;
-  line-height: 0;
   padding-bottom: 1rem;
 }
 
