@@ -9,6 +9,7 @@
 - “caret” has a single “r”.
 - added modifier `.pm-button--for-icon` (for group button made of icons)
 - add missing ` !default` to some variables
+- add `shape-burger` icon (for design system website)
 
 
 # [1.5.1] - 2019-03-26
